# GrokSearch

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: README_EN.md
src/grok_search/: __init__.py  app.py  config.py  logger.py  planning.py  prompts.py  server.py  sources.py  utils.py
src/grok_search.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/grok_search/clients/: __init__.py  tavily.py
src/grok_search/providers/: __init__.py  base.py  grok.py
src/grok_search/runtime/: __init__.py  models.py  retries.py
src/grok_search/services/: __init__.py  configuration.py  grok.py  search.py
src/grok_search/tools/: __init__.py  configuration.py  content.py  search.py  tavily.py
tests/: test_configuration_service.py  test_grok_provider.py  test_packaging_config.py  test_search_service.py  test_server_tools.py  test_sources.py  test_tavily_client.py  test_web_map_regressions.py  test_web_search_regressions.py
